new pipeline authentication
